styles/styles.css
@font-face {
  font-family: 'TelefonNormal';
  src: url('./fonts/Telefon-Normal.otf');
}

@font-face {
  font-family: 'TelefonBoldItalic';
  src: url('./fonts/Telefon-BoldItalic.otf');
}

body {
  margin: 0;
  padding: 0;
  font-family: 'TelefonNormal', Verdana, sans-serif;
  color: #444;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'TelefonBoldItalic', Verdana, sans-serif;
  line-height: 1;
}

a { text-decoration: none; }

#map {
  position: fixed;
  height: 100vh;
  width: 100vw;
}

#play-button {
  position: absolute;
  font-size: 1.5em;
  line-height: 0;
  top: 0.5em;
  left: 0.5em;
  color: #3255a4;
  opacity: 0.7;
  cursor: pointer;
  transition: all 0.4s ease-in-out;
}
#play-button:hover {
  color: #f15060;
}

.event-marker {
  background-size: cover;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  z-index: 1;
  cursor: pointer;
  transition:
    width 1s ease-in-out,
    height 1s ease-in-out,
    margin-left 1s ease-in-out,
    margin-top 1s ease-in-out,
    border-radius 1s ease-in-out,
    filter .2s ease-in-out,
    z-index 1s ease-in-out;
}
.event-marker:hover {
  filter: brightness(1.1);
  margin-left: -150px;
  margin-top: -100px;
  width: 450px;
  height: 350px;
  border-radius: 0;
  z-index: 2;
}
.event-marker:hover .event-info {
  font-size: 1rem;
}
.event-marker.active {
  animation: scaleMarkerStepwise 2s steps(3, start) forwards;
}
.event-marker.active .event-info {
  animation: scaleFontStepwise 2s steps(3, start) forwards;
}

@keyframes scaleMarkerStepwise {
  to {
    margin-left: -150px;
    margin-top: -100px;
    width: 450px;
    height: 350px;
    border-radius: 0;
    z-index: 2;
  }
  from {
    margin-left: 0;
    margin-top: 0;
    width: 50px;
    height: 50px;
    border-radius: 0;
    z-index: 1;
  }
}

@keyframes scaleFontStepwise {
  to {
    font-size: 1rem;
  }
}

.event-info {
  color: white;
  background-size: cover;

  text-align: right;
  padding: 1rem;
  height: 90%;

  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: flex-end;

  font-size: 0;
  transition: font 1s ease-in-out;
}
.start-time, .title {
  font-family: 'TelefonBoldItalic', Verdana, sans-serif;
  line-height: 1.5;
}
.start-time { font-size: 3.1em; }
.title {
  font-size: 1.8em;
  padding-left: 1em;
}

.location-marker {
  width: 15px;
  height: 15px;
  border-radius: 50%;
  background-color: rgba(50, 85, 164, 0.75);
  opacity: 0.9;
}
.location-marker-accuracy {
  width: 70px;
  height: 70px;
  border-radius: 50%;
  background-color: rgba(50, 85, 164, 0.75);
  opacity: 0.2;
}


/* Mapbox overrides */
.mapboxgl-map {
  font-family: inherit;
  font-size: inherit;
}

.mapboxgl-popup {
  transform: translate(0) !important;
  position: absolute;
  top: auto;
  bottom: 3em;
  z-index: 3;
}
@media (min-width: 768px) {
  .mapboxgl-popup {
    left: 3em;
  }
}
.mapboxgl-popup-tip { display: none; }
.mapboxgl-popup-content {
  border-radius: 1px;
  padding: 0;
}
@media (min-width: 768px) {
  .mapboxgl-popup-content {
    max-width: 400px;
  }
}

